feat: WA automation upgrade — MessageTemplates, FonnteClient retry/rate-limit, broadcast endpoint
- notification-service: add spring-retry + AOP + Guava dependencies
- @EnableRetry on NotificationServiceApplication
- MessageTemplates rewritten with static final String constants ({placeholder} syntax)
  for 8 events: ORDER_CONFIRMED, ORDER_PAID, REVISION_REQUESTED, REVISION_COMPLETED,
  RSVP_RECEIVED, INVITATION_EXPIRING, GIFT_CONFIRMED, INVITATION_LIVE
- FonnteClient: @Retryable(maxAttempts=3, backoff=2s), Guava RateLimiter(20/min),
  sendBulk(List<String> targets, String message) using comma-separated Fonnte API target
- BroadcastService: fetches phones from invitation-service (ALL_ACTIVE or EXPIRING_7D),
  calls fonnteClient.sendBulk()
- BroadcastController: POST /api/v1/notifications/broadcast
- invitation-service: findByStatus() on repository, listActivePhones() on service,
  GET /api/v1/admin/invitations/active-phones endpoint
- admin-service: notificationRestClient bean, NotificationAdminClient, BroadcastRequest DTO,
  POST /admin/broadcast/wa route, broadcast WA Thymeleaf page, sidebar nav entry

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QmomEDpxN54KSkJy4feckm